--- a/src/assets/scss/core/_typography.scss
+++ b/src/assets/scss/core/_typography.scss
@@ -1,17 +1,16 @@
 
 
 $font__line-height: auto;
-$font__size: 18px;
+$font__size: 14px;
 $font__weight: normal;
-$font__family: 'SourceCodePro';
+$font__family: 'Manrope';
 $font__style:  sans-serif;
-$font__file-name: 'SourceCodePro-';
+$font__file-name: 'Manrope-';
 $font__path: '/assets/fonts/#{$font__file-name}';
 $font__ext: (woff2,woff);
 $font__types: (
-                ('Light', 300, normal),
-                //('Boldlt', bold, normal),
-               // ('Regularlt', normal, normal),
+                ('Regular', normal, normal),
+                ('Medium', 500, normal),
 );
 
 @each $name, $weight, $style in $font__types {
