--- a/src/assets/scss/project/pages/index/_index.scss
+++ b/src/assets/scss/project/pages/index/_index.scss
@@ -1,1 +1,94 @@
+.main {
+  display: flex;
+  min-height: 100vh;
+  padding-top: 100px;
+  background-color: #f1f5fa;
+}
 
+#app {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+  margin-top: 10rem;
+  padding-bottom: 3rem;
+  @include breakpoint($phone__all) {
+    margin-top: 3rem;
+  }
+}
+
+.registration {
+  &__wrap {
+    display: flex;
+    justify-content: space-between;
+    @include breakpoint($portrait__all) {
+      flex-direction: column;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+
+    width: 550px;
+    @include breakpoint($phone__all) {
+      width: 100%;
+    }
+  }
+
+  &__title {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 30px;
+  }
+
+  &__item {
+
+    &-label {
+      display: block;
+      height: 80px;
+      margin-bottom: 0;
+    }
+
+    &-input {
+      display: flex;
+      align-items: center;
+
+      height: 60px;
+      padding: 0 30px;
+      border: 1px solid transparent;
+      border-radius: 10px;
+      box-shadow: 0 1px 1px rgba(0, 66, 142, .25);
+
+      &::placeholder {
+        color: #7188a3;
+      }
+    }
+
+    &--wraped {
+      flex: 0 0 48%;
+      @include breakpoint($phone__all) {
+        flex: 0 0 100%;
+      }
+
+
+    }
+  }
+
+  &__submit {
+    width: 200px;
+    height: 50px;
+    margin-left: auto;
+    color: white;
+    border-radius: 60px;
+    background: rgba(1, 163, 255, 1);
+    &.disabled {
+      pointer-events: none;
+      background: rgba(1, 163, 255, .25);
+    }
+    @include breakpoint($phone__all) {
+      margin: 0 auto;
+    }
+  }
+}
