--- a/src/assets/scss/project/pages/index/_index.scss
+++ b/src/assets/scss/project/pages/index/_index.scss
@@ -101,4 +101,18 @@
       background: rgba(1, 163, 255, .25);
     }
   }
+
+  &__success {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    img {
+      max-width: 50px;
+    }
+
+  }
 }
